--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "gray-matter": "^4.0.3",
@@ -19,16 +17,14 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-force-graph-2d": "^1.29.0",
-    "tailwind-merge": "^3.4.0"
+    "sass": "^1.94.2"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.4",
-    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
